# CS100-Project

./: .gitignore  CMakeLists.txt  README.md  UnixGame.hpp  WinGame.hpp  attackCharacter.hpp  basicWeapon.hpp  battleArt.txt  bountyJob.txt  broom.hpp  character.hpp  dagger.hpp  farmer.txt  farmerJob.txt  game.cpp  game.hpp  helperFunction.cpp  helperFunction.hpp  littleGirlDemon.txt  littlegirl.txt  longSword.hpp  main.cpp  mentor.txt  quest.hpp  scene2.txt  scene3.txt  staff.hpp  test.cpp  tutorial.cpp  tutorial.txt  victory.txt  weaponBehavior.hpp  weapons.cpp  weapons.hpp
ArtFiles/: battleArt.txt  menuArt.txt  victory.txt
BaseGameFiles/: UnixGame.hpp  game.cpp  game.hpp  helperFunction.cpp  helperFunction.hpp
CharacterFiles/: attackCharacter.hpp  attribute  attribute.cpp  attribute.hpp  attributeBehavior.hpp  bob.hpp  character.hpp  knight.hpp  main  main.cpp  npAttackCharacter.hpp  npc.hpp  playableCharacter.hpp  rogue.hpp  wizard.hpp
CharacterSelection/: CharacterSelection.hpp  UnixGame.hpp  WinGame.hpp  game.hpp  game1.hpp
StoryFiles/: farmerJob.txt  scene1.txt  scene3.txt
Unit Tests/: attributeTest.cpp  characterTest.cpp  test.cpp  weaponsTests.cpp
WeaponsFiles/: basicWeapon.hpp  broom.hpp  dagger.hpp  longSword.hpp  staff.hpp  weaponBehavior.hpp  weapons.cpp  weapons.hpp
